# entity3d-math

./: CMakeLists.txt  README.md  build.sh
include/: e3dmath.h  matrix.h  vector.h
include/e3dmath/types/: mat.h  point.h
include/e3dmath/utils/: mat.h  point.h  polygon.h  projection.h  vec.h
include/types/: mat.h  polygon.h  vec.h
include/utils/: mat.h  point.h  polygon.h  projection.h  vec.h
src/: main.cpp
